tests/invalid/function/generic_expected_conflict_arg_return.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine bool {
  (id 1)
}
